# COS301_DND_Backend

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile  README.md  dnd-game-manager-firebase-adminsdk-34ek4-cccabd3dd6.json.enc  dnd_backend.service  main.py  package-lock.json  package.json  pubspec.yaml  requirements.txt  runProduction.sh  setup.cfg
lib/dart/: server.pb.dart  server.pbgrpc.dart
protos/: server.proto
server/: backgroundworker.py  character.py  config.py  db.py  firebase.py  helpers.py  log.py  main.py  server_pb2.py  server_pb2_grpc.py  session.py  sessions_server.py  version.py
server/database/: db.py
test/: .gitignore  login.mjs  main.py  pubspec.yaml  server.pb.dart  server.pbjson.dart  server_pb2.py  server_pb2_grpc.py  test.dart  test_characters.py  test_sessions.py
test/database/: db.py
test/lib/: server.pb.dart  server.pbgrpc.dart  server.pbjson.dart
