[metadata]
name = COS301 DND Backend
author = Thomas Scholtz
author-email = thomas@quantum-sicarius.za.net
summary = Backend API for DND State manager
license = MIT
description-file = README.md
requires-python = >=3.5
home-page = https://github.com/COS301-OptimizePrime/COS301_DND_Backend
project_urls =
    Source Code = https://github.com/COS301-OptimizePrime/COS301_DND_Backend
classifier =
    Development Status :: Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: Linux
    Programming Language :: Python